Fix top margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h2 {
   display: grid;
   align-items: center;
   min-height: 90vh;
+  margin-top: 2em;
 }
 
 .cards {
@@ -91,6 +92,7 @@ box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.20);
 @media screen and (min-width: 640px) {
   .main-container {
     max-width: 600px;
+    margin-top: 0;
   }
   .cards {
     grid-template-columns: 1fr 1fr;
